<resources>
    <string name="app_name">FuelKeeper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home Fragment text resources -->
    <string name="fuel_average">Średnie spalanie</string>
    <string name="driving_expenses">Koszt Jazdy</string>
    <string name="l_100_km">l/100 km</string>
    <string name="pln_100_km">PLN/100 km</string>
    <string name="recent_refill">Ostatnie Tankowanie</string>
    <string name="stat">W sumie</string>

    <!-- Add new refuel Fragment text resources -->
    <string name="refuel_date_hint">Data tankowania</string>
    <string name="current_mileage_hint">Aktualny przebieg</string>
    <string name="fuel_amount_hint">Ilosc zatankowanego paliwa</string>
    <string name="fuel_price_hint">Cena litra paliwa</string>
    <string name="notes_hint">Notatki...</string>
    <string name="save_btt">Zapisz</string>
    <string name="required">required</string>
    <string name="HomeStat">Statystyki</string>
    <string name="Register">Rejestr</string>
    <string name="settings">Ustawienia</string>
    <string name="empty_field_error">To pole nie może być puste</string>

    <!-- Refuel Register Fragment text resources -->
    <string name="km"> km</string>
    <string name="pln"> pln</string>
    <string name="delete_cancel">Delete Cancel</string>
    <string name="night_mode_is_on">Night Mode is on</string>
    <string name="night_mode_is_off">Night Mode is off</string>
    <string name="turn_on_night_mode">Turn On Night Mode</string>
    <string name="turn_off_night_mode">Turn Off Night Mode</string>
    <string name="chose_theme">Wybierz kolorystyke</string>
    <string name="taka_sama_jak_w_telefonie">Taka sama jak w telefonie</string>
    <string name="nocny_motyw">Nocny motyw</string>
    <string name="jasny_motyw">Jasny motyw</string>

</resources>