<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_chose_theme"
        style="@style/homeFragmentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/chose_theme"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chose_system_theme"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:theme="@style/RvItemColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_chose_theme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/homeFragmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="System"
                android:textAllCaps="false">

            </TextView>

            <TextView
                style="@style/homeFragmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/taka_sama_jak_w_telefonie"
                android:textAllCaps="false">

            </TextView>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/night_theme"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        app:cardElevation="6dp"
        android:theme="@style/RvItemColor"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@+id/day_theme"
        app:layout_constraintStart_toEndOf="@id/chose_system_theme"
        app:layout_constraintTop_toTopOf="@+id/chose_system_theme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_night_theme_moon"
                style="@style/RvItemColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_moon">

            </ImageView>

            <TextView
                style="@style/homeFragmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/nocny_motyw"
                android:textAllCaps="false">

            </TextView>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/day_theme"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:theme="@style/RvItemColor"
        app:cardElevation="6dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/night_theme"
        app:layout_constraintTop_toTopOf="@+id/chose_system_theme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_day_theme_moon"
                style="@style/RvItemColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_sun">

            </ImageView>

            <TextView
                style="@style/homeFragmentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/jasny_motyw"
                android:textAllCaps="false">

            </TextView>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>